--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aphrodite": "^1.2.5",
     "bootstrap": "4",
     "react": "^16.0.0",
+    "react-custom-scrollbars": "^4.2.0",
     "react-dom": "^16.0.0",
     "react-dropzone": "^4.2.1",
     "react-router-bootstrap": "^0.24.4",
