--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "aphrodite": "^1.2.5",
     "bootstrap": "4",
+    "copy-to-clipboard": "^3.0.8",
     "react": "^16.0.0",
     "react-custom-scrollbars": "^4.2.0",
     "react-dom": "^16.0.0",
