--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "aphrodite": "^1.2.5",
+    "attr-accept": "^1.1.0",
     "bootstrap": "4",
     "copy-to-clipboard": "^3.0.8",
     "react": "^16.0.0",
