--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "attr-accept": "^1.1.0",
     "autoprefixer": "7.1.2",
     "babel-core": "6.25.0",
-    "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
     "babel-preset-react-app": "^3.0.3",
@@ -38,6 +37,8 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lint-staged": "^4.3.0",
+    "mobx": "^3.3.1",
+    "mobx-react": "^4.3.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
@@ -59,6 +60,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
+    "babel-plugin-transform-decorators": "^6.24.1",
     "babel-eslint": "^8.0.1",
     "prettier": "^1.7.4",
     "standard": "^10.0.3"
@@ -117,6 +119,9 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      "transform-decorators"
     ]
   },
   "eslintConfig": {
