--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-core": "6.25.0",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-app": "^3.0.3",
     "babel-runtime": "6.26.0",
     "bootstrap": "4",
@@ -60,7 +61,6 @@
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
-    "babel-plugin-transform-decorators": "^6.24.1",
     "babel-eslint": "^8.0.1",
     "prettier": "^1.7.4",
     "standard": "^10.0.3"
@@ -121,7 +121,7 @@
       "react-app"
     ],
     "plugins": [
-      "transform-decorators"
+      "transform-decorators-legacy"
     ]
   },
   "eslintConfig": {
