--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "reactstrap": "next",
+    "store": "^2.0.12",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
