--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aphrodite": "^1.2.5",
     "attr-accept": "^1.1.0",
     "autoprefixer": "7.1.2",
+    "axios": "^0.17.0",
     "babel-core": "6.25.0",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
