--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 REACT_APP_FB_ID=117901095069682
 REACT_APP_INSTAGRAM_CLIENT_ID=empty
-REACT_APP_API_URL=http://localhost:3000
+REACT_APP_API_URL=http://it.systemxent.pl/api
