--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dropzone": "^4.2.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
+    "react-select": "^1.0.0-rc.10",
     "reactstrap": "next",
     "store": "^2.0.12",
     "style-loader": "0.18.2",
