--- a/package.json
+++ b/package.json
@@ -56,12 +56,12 @@
     "reactstrap": "next",
     "store": "^2.0.12",
     "style-loader": "0.18.2",
+    "superagent": "^3.8.1",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
     "webpack": "3.5.1",
     "webpack-dev-server": "2.8.2",
-    "webpack-manifest-plugin": "1.2.1",
-    "whatwg-fetch": "2.0.3"
+    "webpack-manifest-plugin": "1.2.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
