--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chalk": "1.1.3",
     "copy-to-clipboard": "^3.0.8",
     "css-loader": "0.28.4",
+    "dashjs": "^2.6.4",
     "dotenv": "4.0.0",
     "eslint": "4.4.1",
     "eslint-config-react-app": "^2.0.1",
